Implement game start and retrieving challenges of game
Change roles approach - constant roles and permissions instead of storing them in database
Modify forbidden/unauthorized response strategy
Authorize requests with annotations instead of config approach
Add WithMockUserEntity annotation for tests because default test authentication solution was not compatible